--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "rm -rf dist .cache .parcel-cache",
-    "build" : "parcel build src/background.js && parcel build src/html/popup.html src/html/sign-out.html"
+    "build": "parcel build src/background.js && parcel build --no-minify src/html/popup.html src/html/sign-out.html"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "parcel-plugin-static-files-copy": "^2.6.0"
+  },
+  "devDependencies": {
+    "cssnano": "^5.0.6",
+    "postcss": "^8.2.15"
   }
 }
