--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "rm -rf dist .cache .parcel-cache",
-    "build": "parcel build --no-minify src/background.js && parcel build --no-minify src/html/popup.html src/html/signOut.html"
+    "build": "parcel build --no-minify src/background.js && parcel build --no-minify src/html/popup.html src/html/home.html"
   },
   "author": "",
   "license": "ISC",
